--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,19 +3,34 @@
     <head>
         <title>Blog Django Girls</title>
     </head>
+    <div>
+        {% for post in posts %}
+            <article>
+                <time>publication: {{ post.published_date }}</time>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </article>
+        {% endfor %}
+    </div>
     <body>
         <header>
             <h1><a href="/">Calendrier du cycle terminale</a></h1>
         </header>
-<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1omSt6uTjv5igNFs0J6uDjVtHQ58JbFOs-utXKul4RUY&amp;font=Default&amp;lang=en&amp;initial_zoom=2&amp;height=400'
-width='90%' height='400' webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="allowfullscreen" frameborder='0'></iframe>
+
+        <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1omSt6uTjv5igNFs0J6uDjVtHQ58JbFOs-utXKul4RUY&amp;font=Default&amp;lang=en&amp;initial_zoom=2&amp;height=400'
+        width='90%' height='400' webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="allowfullscreen" frameborder='0'>
+        </iframe>
+
         <article>
             <time>publication: 14.06.2014, 12:14</time>
             <h2><a href="">Mon premier article</a></h2>
             <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         </article>
-<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ZAFWrZ6UDEWOq7vNsb6HssgFIlv_O-ugz-R4iNPRpoU&font=Default&lang=en&initial_zoom=2&height=450'
-width='90%' height='400' webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="allowfullscreen" frameborder='0'></iframe>
+
+        <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ZAFWrZ6UDEWOq7vNsb6HssgFIlv_O-ugz-R4iNPRpoU&font=Default&lang=en&initial_zoom=2&height=450'
+        width='90%' height='400' webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="allowfullscreen" frameborder='0'>
+        </iframe>
+
         <article>
             <time>publication: 14.06.2014, 12:14</time>
             <h2><a href="">Mon second article</a></h2>
