Autres modifications des templates pour afficher les posts contenus dans la BDD

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Blog Django Girls</title>
+        <title>Le blog</title>
     </head>
     <div>
         {% for post in posts %}
