--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}Principia{% endblock %}</title>
+        <title>{% block title %}Progression{% endblock %}</title>
         <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
 
         <!-- liaison CSS ext-->
@@ -24,6 +24,25 @@
         $( function() {
         $( "#tabs" ).tabs();
         } );
+        $( function() {
+            $( "#accordion" )
+                 .accordion({
+                 header: "> div > h3",
+                 heightStyle: "content",
+                 })
+                 .sortable({
+                 axis: "y",
+                 handle: "h3",
+            stop: function( event, ui ) {
+          // IE doesn't register the blur when sorting
+          // so trigger focusout handlers to remove .ui-state-focus
+            ui.item.children( "h3" ).triggerHandler( "focusout" );
+ 
+          // Refresh accordion to handle new order
+            $( this ).accordion( "refresh" );
+            }
+        });
+        });
         </script>
     </head>
 
@@ -48,24 +67,9 @@
             </div>
         </div>
     </main>
-    <div id="tabs" class="container">
-  <ul>
-    <li><a href="#tabs-1">Propriété</a></li>
-    <li><a href="#tabs-2">Démonstration</a></li>
-    <li><a href="#tabs-3">Application</a></li>
-  </ul>
-  <div id="tabs-1">
-    <p>Soit, pour \(x\) un réel, le polynôme \(p(x)=ax^2+bx+c\) de degré \(2\). Notons \(\Delta=b^2-4ac\) son discriminant.</p> 
-    <p>\(\bullet\) Si \(\Delta>0\), alors il est scindable dans \(\mathbb{R}\).</p>
-  </div>
-  <div id="tabs-2">
-    <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor. Aenean aliquet fringilla sem. Suspendisse sed ligula in ligula suscipit aliquam. Praesent in eros vestibulum mi adipiscing adipiscing. Morbi facilisis. Curabitur ornare consequat nunc. Aenean vel metus. Ut posuere viverra nulla. Aliquam erat volutpat. Pellentesque convallis. Maecenas feugiat, tellus pellentesque pretium posuere, felis lorem euismod felis, eu ornare leo nisi vel felis. Mauris consectetur tortor et purus.</p>
-  </div>
-  <div id="tabs-3">
-    <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce sodales. Quisque eu urna vel enim commodo pellentesque. Praesent eu risus hendrerit ligula tempus pretium. Curabitur lorem enim, pretium nec, feugiat nec, luctus a, lacus.</p>
-    <p>Duis cursus. Maecenas ligula eros, blandit nec, pharetra at, semper at, magna. Nullam ac lacus. Nulla facilisi. Praesent viverra justo vitae neque. Praesent blandit adipiscing velit. Suspendisse potenti. Donec mattis, pede vel pharetra blandit, magna ligula faucibus eros, id euismod lacus dolor eget odio. Nam scelerisque. Donec non libero sed nulla mattis commodo. Ut sagittis. Donec nisi lectus, feugiat porttitor, tempor ac, tempor vitae, pede. Aenean vehicula velit eu tellus interdum rutrum. Maecenas commodo. Pellentesque nec elit. Fusce in lacus. Vivamus a libero vitae lectus hendrerit hendrerit.</p>
-  </div>
-</div>
+
+            {% block menu %}
+            {% endblock %}
 
    {% comment %}
    Calendier annuel
@@ -79,9 +83,5 @@
     <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ZAFWrZ6UDEWOq7vNsb6HssgFIlv_O-ugz-R4iNPRpoU&font=Default&lang=en&initial_zoom=2&height=450'
     width='90%' height='450' webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="allowfullscreen" frameborder='0'>
     </iframe>
-
-
-
-
 </body>
 </html>
