--- a/templates/boards/base_boards.html
+++ b/templates/boards/base_boards.html
@@ -28,6 +28,13 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
+      <div id="mainMenu" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Option1</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Option2</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Option3</a></li>
+        </ul>
+      </div>
       <div class="collapse navbar-collapse" id="mainMenu">
       {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
