--- a/templates/boards/edit_post.html
+++ b/templates/boards/edit_post.html
@@ -16,10 +16,10 @@
 {% endblock %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item"><a href="{% url 'accueil' %}">Table des matières</a></li>
+  <li class="breadcrumb-item"><a href="{% url 'accueil' %}">Liste des formations</a></li>
   <li class="breadcrumb-item"><a href="{% url 'board_topics' post.topic.board.pk %}">{{ post.topic.board.name }}</a></li>
   <li class="breadcrumb-item"><a href="{% url 'topic_posts' post.topic.board.pk post.topic.pk %}">{{ post.topic.subject }}</a></li>
-  <li class="breadcrumb-item active">Modofication de la publication</li>
+  <li class="breadcrumb-item active">Modification de la publication</li>
 {% endblock %}
 
 {% block content %}
