--- a/templates/boards/new_topic.html
+++ b/templates/boards/new_topic.html
@@ -4,7 +4,7 @@
 {% block title %}Ouvrir un nouveau sujet{% endblock %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item"><a href="{% url 'accueil' %}">Table des matières</a></li>
+  <li class="breadcrumb-item"><a href="{% url 'accueil' %}">Liste des formations</a></li>
   <li class="breadcrumb-item"><a href="{% url 'board_topics' board.pk %}">{{ board.name }}</a></li>
   <li class="breadcrumb-item active">Nouveau sujet</li>
 {% endblock %}
