--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -2,15 +2,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}Progression{% endblock %}</title>
-        <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
-
-        <!-- liaison CSS ext-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-
-        <!-- liaison CSS int-->
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+    <meta charset="utf-8">
+    <title>{% block title %}Principia{% endblock %}</title>
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    {% block stylesheet %}{% endblock %}
+    
+    {% comment %}
+    <h3> ..relax : 
+    <audio src="{% static 'audio/in-the-mood.mp3' %}" controls autoplay loop></audio>
+    <video src="{% static 'video/in-the-mood.mp4' %}" controls autoplay loop></video>
+    </h3>
+    {% endcomment %}
+    <!-- Markdown Editor-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 
         <!-- liaison JS - MATHS -->
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
@@ -48,16 +55,48 @@
 
 
 <body>
-    <header class="page-header">
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+      {% if user.is_authenticated %}
       <div class="container">
-        {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu">
-                {% include './icons/file-earmark-plus.svg' %}
-            </a>
-            <h1><a href="/">Principia</a></h1>
-        {% endif %}
+        <a class="navbar-brand" href="{% url 'accueil' %}">La Cordée des Anciens</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+      <div id="mainMenu" class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="#">Seconde</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Première</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Terminale</a></li>
+        </ul>
       </div>
-    </header>
+      <div class="collapse navbar-collapse" id="mainMenu">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{ user.username }}
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+              <a class="dropdown-item" href="{% url 'my_account' %}">Compte</a>
+              <a class="dropdown-item" href="{% url 'password_change' %}">Mot de pass</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'logout' %}">Déconnexion</a>
+            </div>
+          </li>
+        </ul>
+      {% else %}
+        <form class="form-inline ml-auto">
+        <a href="/" class="btn btn-outline-secondary">Consultation en tant qu'invité </a>
+      {% comment %}
+          <a href="{% url 'login' %}" class="btn btn-outline-secondary">Connexion</a>
+          <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Inscription</a>
+      {% endcomment %}
+        </form>
+      {% endif %}
+      </div>
+    </div>
+  </nav>
+</br></br>
 
     <main class="container">
         <div class="row">
@@ -71,17 +110,18 @@
             {% block menu %}
             {% endblock %}
 
-   {% comment %}
-   Calendier annuel
-   {% endcomment %}
+   
     <p class="container">
     <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1omSt6uTjv5igNFs0J6uDjVtHQ58JbFOs-utXKul4RUY&amp;font=Default&amp;lang=en&amp;initial_zoom=2&amp;height=400'
-    width='90%' height='400' webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="allowfullscreen" frameborder='0'>
+    width='100%' height='400' webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="allowfullscreen" frameborder='0'>
     </iframe>
     </p>
 
+    {% comment %}
+   Calendier annuel
     <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1ZAFWrZ6UDEWOq7vNsb6HssgFIlv_O-ugz-R4iNPRpoU&font=Default&lang=en&initial_zoom=2&height=450'
     width='90%' height='450' webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="allowfullscreen" frameborder='0'>
     </iframe>
+   {% endcomment %}
 </body>
 </html>
