--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,7 +5,7 @@
     <article class="post">
         <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}
         </a></h2><time class="date">
-            Date de publication : {{ post.published_date }}
+            Dernière publication : {{ post.published_date }}
         </time>
         <p>{{ post.text|linebreaksbr }}</p>
     </article>
