--- a/templates/boards/base_boards.html
+++ b/templates/boards/base_boards.html
@@ -24,15 +24,15 @@
     {% block body %}
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'accueil' %}">Principia Mathematica</a>
+        <a class="navbar-brand" href="{% url 'accueil' %}">La Cordée des Anciens</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
       <div id="mainMenu" class="collapse navbar-collapse">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="#">Option1</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Option2</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Option3</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Seconde</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Première</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Terminale</a></li>
         </ul>
       </div>
       <div class="collapse navbar-collapse" id="mainMenu">
@@ -43,8 +43,8 @@
               {{ user.username }}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
-              <a class="dropdown-item" href="#">Compte</a>
-              <a class="dropdown-item" href="#">Mot de pass</a>
+              <a class="dropdown-item" href="{% url 'my_account' %}">Compte</a>
+              <a class="dropdown-item" href="{% url 'password_change' %}">Mot de pass</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}">Déconnexion</a>
             </div>
