--- a/templates/boards/topics.html
+++ b/templates/boards/topics.html
@@ -7,13 +7,13 @@
 {% endblock %}
 
 {% block breadcrumb %}
-  <li class="breadcrumb-item"><a href="{% url 'accueil' %}">Table des matières</a></li>
+  <li class="breadcrumb-item"><a href="{% url 'accueil' %}">Liste des formations</a></li>
   <li class="breadcrumb-item active">{{ board.name }}</li>
 {% endblock %}
 
 {% block content %}
   <div class="mb-4">
-    <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">Nouveau sujet</a>
+    <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">Présenter mon parcours</a>
   </div>
 
   <table class="table table-striped mb-4">
