--- a/templates/accounts/password_change_done.html
+++ b/templates/accounts/password_change_done.html
@@ -9,7 +9,7 @@
 
 {% block content %}
   <div class="alert alert-success" role="alert">
-    <strong>Ok</strong> Ton mot de pass vient d'être mis à jour.
+    <strong>Ok</strong> Ton mot de passe vient d'être mis à jour.
   </div>
   <a href="{% url 'accueil' %}" class="btn btn-secondary">Table des matières</a>
 {% endblock %}
