--- a/templates/accounts/password_reset_confirm.html
+++ b/templates/accounts/password_reset_confirm.html
@@ -14,14 +14,14 @@
       <div class="card">
         <div class="card-body">
           {% if validlink %}
-            <h3 class="card-title">Modification du mot de pass de @{{ form.user.username }}</h3>
+            <h3 class="card-title">Modification du mot de passe de @{{ form.user.username }}</h3>
             <form method="post" novalidate>
               {% csrf_token %}
               {% include 'boards/includes/form.html' %}
               <button type="submit" class="btn btn-success btn-block">Réinitialiser le mot de passe</button>
             </form>
           {% else %}
-            <h3 class="card-title">Reset your password</h3>
+            <h3 class="card-title">Nouveau mot de passe</h3>
             <div class="alert alert-danger" role="alert">
               Mot de pass non valide, tu peux recommencer...
             </div>
