--- a/templates/boards/accueil.html
+++ b/templates/boards/accueil.html
@@ -62,7 +62,7 @@
          <div class="card">
              <div class="front">
                  <div class="cover">
-                     <img src="static/img/fond_flore.png"/>
+                     <img src="{% static 'img/fond_flore.png'%}"/>
                  </div>
                  <div class="user">
                      <img class="img-circle" src="static/img/flore.png"/>
@@ -198,10 +198,10 @@
          <div class="card">
              <div class="front">
                  <div class="cover">
-                     <img src="static/img/inconnu.gif"/>
+                     <img src="{% static 'img/inconnu.gif' %}"/>
                  </div>
                  <div class="user">
-                     <img class="img-circle" src="static/img/pic.png"/>
+                     <img class="img-circle" src="{% static 'img/pic.png' %}"/>
                  </div>
                  <div class="content">
                      <div class="main">
