PAramétrage des mails

--- a/templates/accounts/base_accounts.html
+++ b/templates/accounts/base_accounts.html
@@ -9,7 +9,7 @@
 {% block body %}
   <div class="container">
     <h1 class="text-center logo my-4">
-      <a href="{% url 'accueil' %}">Actu</a>
+      <a href="{% url 'accueil' %}">L'Anno</a>
     </h1>
     {% block content %}
     {% endblock %}
