--- a/templates/boards/base_boards.html
+++ b/templates/boards/base_boards.html
@@ -32,7 +32,7 @@
     {% block body %}
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'accueil' %}">Actu</a>
+        <a class="navbar-brand" href="{% url 'accueil' %}">L'Anno</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
