--- a/templates/boards/includes/pagination.html
+++ b/templates/boards/includes/pagination.html
@@ -13,7 +13,7 @@
 
       {% if page_obj.has_previous %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+          <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Précédente</a>
         </li>
       {% else %}
         <li class="page-item disabled">
@@ -38,7 +38,7 @@
 
       {% if page_obj.has_next %}
         <li class="page-item">
-          <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+          <a class="page-link" href="?page={{ page_obj.next_page_number }}">Suivante</a>
         </li>
       {% else %}
         <li class="page-item disabled">
@@ -52,7 +52,7 @@
         </li>
       {% else %}
         <li class="page-item disabled">
-          <span class="page-link">Last</span>
+          <span class="page-link">Dernière</span>
         </li>
       {% endif %}
     </ul>
