--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -117,7 +117,7 @@
 <div class="tabls">
        <div class="tabl">
           <input type="checkbox" id="chck1">
-          <label class="tabl-label" for="chck1">TP01 - Prise en main</label>
+          <label class="tabl-label" for="chck1">TP01 - Programmation impérative</label>
           <div class="tabl-content">
             <iframe height="1000px" width="100%" src="https://replit.com/@ELHAMMOUCHI/TP-01-Prise-en-main?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
             sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals">
@@ -147,7 +147,7 @@
 
        <div class="tabl">
           <input type="checkbox" id="chck4">
-          <label class="tabl-label" for="chck4">TP04 - Programmation modulaire</label>
+          <label class="tabl-label" for="chck4">TP04 - Programmation fonctionnelle</label>
           <div class="tabl-content">
           <iframe height="1000px" width="100%" src="https://replit.com/@ELHAMMOUCHI/TP04-Programmation-modulaire?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true"
             sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals">
