--- a/templates/boards/accueil.html
+++ b/templates/boards/accueil.html
@@ -62,7 +62,7 @@
          <div class="card">
              <div class="front">
                  <div class="cover">
-                     <img src="{% static 'img/fond_flore.png'%}"/>
+                     <img src="{% static 'img/archi.gif'%}"/>
                  </div>
                  <div class="user">
                      <img class="img-circle" src="static/img/flore.png"/>
